kubernetes/core/networking/nginx-int-ingress-system/services/adguard-home/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
spec:
  type: ExternalName
  externalName: router.${LOCAL_DOMAIN}
  ports:
    - name: http
      port: &port 8080
      protocol: TCP
      targetPort: *port
