kubernetes/core/networking/nginx-int-ingress-system/services/adguard-home/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app adguard-home
spec:
  ingressClassName: int-ingress
  rules:
    - host: &host adguard.${K8S_GATEWAY_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
